@@ -1,12 +1,6 @@
 Microsoft Visual Studio Solution File, Format Version 9.00
 # Visual Studio 2005
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "browsertest2K5", "..\tests\browser\browsertest2K5.csproj", "{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}"
-EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "SWF2k5", "..\..\mcs\class\Managed.Windows.Forms\SWF2k5.csproj", "{5E6430B2-6B9F-4E76-802E-20207EF80391}"
-EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "gluezilla", "gluezilla2K5.vcproj", "{56A171F9-9FBE-4859-9EA0-DC7890E19980}"
-EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Mono.Mozilla2K5", "..\..\mcs\class\Mono.Mozilla\Mono.Mozilla2K5.csproj", "{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -30,66 +24,6 @@ Global
 		Release|Win32 = Release|Win32
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 1.1|Any CPU.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 1.1|Any CPU.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 1.1|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 1.1|Mixed Platforms.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 1.1|Win32.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 2.0|Any CPU.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 2.0|Any CPU.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 2.0|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 2.0|Mixed Platforms.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug 2.0|Win32.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Debug|Win32.ActiveCfg = Debug|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 1.1|Any CPU.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 1.1|Any CPU.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 1.1|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 1.1|Mixed Platforms.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 1.1|Win32.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 2.0|Any CPU.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 2.0|Any CPU.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 2.0|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 2.0|Mixed Platforms.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release 2.0|Win32.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release|Any CPU.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{BBC2EABC-DDFC-4A9F-A7EE-41A512BB1FA0}.Release|Win32.ActiveCfg = Release|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 1.1|Any CPU.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 1.1|Any CPU.Build.0 = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 1.1|Mixed Platforms.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 1.1|Mixed Platforms.Build.0 = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 1.1|Win32.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 2.0|Any CPU.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 2.0|Any CPU.Build.0 = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 2.0|Mixed Platforms.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 2.0|Mixed Platforms.Build.0 = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug 2.0|Win32.ActiveCfg = Debug 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Debug|Win32.ActiveCfg = Debug|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 1.1|Any CPU.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 1.1|Any CPU.Build.0 = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 1.1|Mixed Platforms.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 1.1|Mixed Platforms.Build.0 = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 1.1|Win32.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 2.0|Any CPU.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 2.0|Any CPU.Build.0 = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 2.0|Mixed Platforms.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 2.0|Mixed Platforms.Build.0 = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release 2.0|Win32.ActiveCfg = Release 1.1|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release|Any CPU.Build.0 = Release|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{5E6430B2-6B9F-4E76-802E-20207EF80391}.Release|Win32.ActiveCfg = Release|Any CPU
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Debug 1.1|Any CPU.ActiveCfg = Debug|Win32
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Debug 1.1|Mixed Platforms.ActiveCfg = Debug|Win32
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Debug 1.1|Mixed Platforms.Build.0 = Debug|Win32
@@ -120,66 +54,6 @@ Global
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Release|Mixed Platforms.Build.0 = Release|Win32
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Release|Win32.ActiveCfg = Release|Win32
 		{56A171F9-9FBE-4859-9EA0-DC7890E19980}.Release|Win32.Build.0 = Release|Win32
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 1.1|Any CPU.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 1.1|Any CPU.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 1.1|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 1.1|Mixed Platforms.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 1.1|Win32.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 2.0|Any CPU.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 2.0|Any CPU.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 2.0|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 2.0|Mixed Platforms.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug 2.0|Win32.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Debug|Win32.ActiveCfg = Debug|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 1.1|Any CPU.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 1.1|Any CPU.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 1.1|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 1.1|Mixed Platforms.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 1.1|Win32.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 2.0|Any CPU.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 2.0|Any CPU.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 2.0|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 2.0|Mixed Platforms.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release 2.0|Win32.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release|Any CPU.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{3A1F2BAF-B92F-4F90-8250-A0F04ACCEAD0}.Release|Win32.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 1.1|Any CPU.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 1.1|Any CPU.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 1.1|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 1.1|Mixed Platforms.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 1.1|Win32.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 2.0|Any CPU.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 2.0|Any CPU.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 2.0|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 2.0|Mixed Platforms.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug 2.0|Win32.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Debug|Win32.ActiveCfg = Debug|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 1.1|Any CPU.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 1.1|Any CPU.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 1.1|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 1.1|Mixed Platforms.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 1.1|Win32.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 2.0|Any CPU.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 2.0|Any CPU.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 2.0|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 2.0|Mixed Platforms.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release 2.0|Win32.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release|Any CPU.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release|Mixed Platforms.Build.0 = Release|Any CPU
-		{1ABFAA94-C72B-4B06-A18E-7CB42D11968B}.Release|Win32.ActiveCfg = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
